# urlobject

./: .coveragerc  .gitignore  .hgignore  .hgtags  .travis.yml  MANIFEST.in  README  README.md  README.rst  index.html  params.json  pyproject.toml  setup.py  test.py  tox.ini  urlobject.py
doc/: Makefile  api.rst  conf.py  index.rst  quickstart.rst
lib/urlobject/: netloc.py  path.py  query_string.py  urlobject.py
test/: netloc_test.py  path_test.py  querystring_test.py  urlobject_test.py
urlobject/: __init__.py  domain_levels.py  netloc.py  path.py  ports.py  query_string.py  six.py  urlobject.py
